--- a/reflectable/pubspec.yaml
+++ b/reflectable/pubspec.yaml
@@ -4,22 +4,23 @@ description: >
   Reflection support based on code generation, using 'capabilities' to
   specify which operations to support, on which objects.
 homepage: https://github.com/google/reflectable.dart
+repository: https://github.com/open-runtime/reflectable
 environment:
   sdk: '>=3.0.0 <4.0.0'
 dependencies:
-  analyzer: ^6.4.0
-  build: ^2.4.0
-  build_resolvers: ^2.4.0
-  build_config: ^1.0.0
-  build_runner: ^2.4.0
-  build_runner_core: ^7.2.0
-  dart_style: ^2.3.0
-  glob: ^2.1.0
+  analyzer: ^6.4.1
+  build: ^2.4.1
+  build_resolvers: ^2.4.2
+  build_config: ^1.1.1
+  build_runner: ^2.4.8
+  build_runner_core: ^7.3.0
+  dart_style: ^2.3.6
+  glob: ^2.1.2
   logging: ^1.2.0
   package_config: ^2.1.0
-  path: ^1.8.3
+  path: ^1.9.0
   source_span: ^1.10.0
 dev_dependencies:
-  build_test: ^2.2.0
+  build_test: ^2.2.2
   lints: ^3.0.0
-  test: ^1.25.0
+  test: ^1.25.2
