--- a/test_reflectable/pubspec.yaml
+++ b/test_reflectable/pubspec.yaml
@@ -9,12 +9,12 @@ description: >
 environment:
   sdk: '>=3.0.0 <4.0.0'
 dependencies:
-  build_runner: any
-  glob: any
+  build_runner: ^2.4.8
+  glob: ^2.1.2
   reflectable:
     path: ../reflectable
 dev_dependencies:
-  analyzer: any
-  build_test: any
-  lints: any
-  test: ^1.25.0
+  analyzer: ^6.4.1
+  build_test: ^2.2.2
+  lints: ^3.0.0
+  test: ^1.25.2
