--- a/reflectable/pubspec.yaml
+++ b/reflectable/pubspec.yaml
@@ -1,18 +1,16 @@
 name: reflectable
 version: 4.0.6
-description: >
-  Reflection support based on code generation, using 'capabilities' to
-  specify which operations to support, on which objects.
+description: Reflection support based on code generation, using 'capabilities' to specify which operations to support, on which objects.
 homepage: https://github.com/google/reflectable.dart
 repository: https://github.com/open-runtime/reflectable
 environment:
   sdk: '>=3.3.0 <4.5.0'
 dependencies:
-  analyzer: ^6.4.1
+  analyzer: ^6.4.0
   build: ^2.4.1
   build_resolvers: ^2.4.2
   build_config: ^1.1.1
-  build_runner: ^2.4.9
+  build_runner: ^2.4.11
   build_runner_core: ^7.3.0
   dart_style: ^2.3.6
   glob: ^2.1.2
@@ -21,6 +19,6 @@ dependencies:
   path: ^1.9.0
   source_span: ^1.10.0
 dev_dependencies:
-  build_test: ^2.2.2
-  lints: ^3.0.0
+  build_test:
+  lints: ^4.0.0
   test: ^1.25.3
