--- a/test_reflectable/pubspec.yaml
+++ b/test_reflectable/pubspec.yaml
@@ -12,8 +12,9 @@ dependencies:
   build_runner: ^2.4.9
   glob: ^2.1.2
   reflectable:
+    path: ../reflectable
 dev_dependencies:
-  analyzer: ^6.4.1
-  build_test: ^2.2.2
-  lints: ^3.0.0
+  analyzer: ^6.4.0
+  build_test:
+  lints: ^4.0.0
   test: ^1.25.3
